--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-react": "^7.23.1",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "props-type": "^1.0.1"
   }
 }
